--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./Assets/assets/css/style.css">
     <title>Code Quiz - initials and Score </title>
 </head>
 <body>  
@@ -52,6 +52,6 @@
 
 
 
-    <script src="./script.js"></script>
+    <script src="./Assets/script.js"></script>
 </body>
 </html>
